# ccbox

./: .gitignore  CHANGELOG.md  LICENSE  README.md  index.html  package-lock.json  package.json  tailwind.config.cjs  vite.config.ts
.github/workflows/: release.yml
docs/superpowers/specs/: 2026-06-14-ccbox-design.md
scripts/: gen-icon.mjs
src/: App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: claude_config_writer.rs  commands.rs  main.rs  models.rs  presets.rs  provider_quota.rs  provider_service.rs  state.rs  storage.rs  usage_service.rs
src/components/: AppLogo.tsx  BottomNav.tsx  BrandIcon.tsx  Header.tsx  UpdateDialog.tsx  WindowControls.tsx
src/components/providers/: ModelSelect.tsx  ProviderCard.tsx  ProviderFormDialog.tsx  ProviderList.tsx
src/components/settings/: SettingsPage.tsx
src/components/statusbar/: ModuleCard.tsx  StatusBarPage.tsx  StatusBarPreview.tsx
src/components/ui/: badge.tsx  button.tsx  dialog.tsx  dropdown-menu.tsx  switch.tsx  tabs.tsx
src/components/usage/: BarChart.tsx  Heatmap.tsx  TrendChart.tsx  UsageDashboard.tsx
src/lib/: api.ts  confetti.ts  statusbar.ts  theme.tsx  types.ts  useReorder.ts  useUpdateChecker.ts  utils.ts
